syntax = "proto3";

import "../dungeon/monster.proto";

message Stats {
  int32 atk = 1;
  int32 def = 2; 
  int32 curHp = 3;
  int32 maxHp = 4; 
  int32 moveSpeed = 5;
  float criticalProbability = 6;
  float criticalDamageRate = 7;
}

message ItemInfo {
  int32 itemId = 1; // 아이템 ID
  Stats stats = 2;
}

message C_UseItem {
  int32 itemId = 1; // 사용할 아이템 ID
  int32 itemInstanceId = 2;
}

message S_UseItem {
	int32 playerId = 1; // 아이템 사용한 유저 ID
  ItemInfo itemInfo = 2; // 사용 후 남은 아이템 정보
  int32 itemInstanceId = 3;
}